--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:id="@+id/container"
         android:layout_height="match_parent"
-        tools:context=".NavigationActivity">
+        tools:context=".navigation.NavigationActivity">
 
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
