--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -4,11 +4,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/product_layout">
 
 
     <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/product_image"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
