add reviews feature implemented

--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -20,13 +20,54 @@
             android:layout_width="match_parent"
             android:layout_height="64dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp">
+            app:layout_constraintStart_toStartOf="parent" android:id="@+id/review_post_a_comment">
 
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:text="123"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:text="@string/post_comment_btn"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/review_post" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            <RatingBar
+                    android:layout_width="wrap_content"
+                    android:numStars="5"
+                    android:theme="@style/RatingBar"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/review_rating"
+                    android:isIndicator="false"
+                    android:scaleX="0.5"
+                    android:scaleY="0.5"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/review_edt"
+                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/review_post" android:layout_marginRight="8dp"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="@string/comment_text_hint"
+                    android:ems="10"
+                    android:theme="@style/EditTextStyle"
+                    android:textSize="16sp"
+                    android:id="@+id/review_edt" android:layout_marginStart="12dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
-</>
+</androidx.constraintlayout.widget.ConstraintLayout>
