--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
             android:inputType="textPersonName"
             android:hint="@string/username_login_edt"
             android:ems="10"
-            android:theme="@style/EditTextTheme"
+            android:theme="@style/EditTextStyle"
             android:id="@+id/username_edt"
             android:layout_marginTop="256dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
@@ -24,7 +24,7 @@
             android:hint="@string/password_login_edt"
             android:inputType="textPassword"
             android:ems="10"
-            android:theme="@style/EditTextTheme"
+            android:theme="@style/EditTextStyle"
             android:id="@+id/password_edt" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
