--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -13,7 +13,7 @@
             android:inputType="textPersonName"
             android:hint="@string/username_login_edt"
             android:ems="10"
-            android:theme="@style/EditTextTheme"
+            android:theme="@style/EditTextStyle"
             android:id="@+id/reg_username_edt" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="256dp" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
@@ -24,7 +24,7 @@
             android:inputType="textPassword"
             android:hint="@string/password_login_edt"
             android:ems="10"
-            android:theme="@style/EditTextTheme"
+            android:theme="@style/EditTextStyle"
             android:id="@+id/reg_password_edt" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/reg_username_edt" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/confirm_edt"
-            android:theme="@style/EditTextTheme"
+            android:theme="@style/EditTextStyle"
             android:ems="10"
             android:id="@+id/reg_confirm_edt" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
