--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
     <TextView
-            android:text="TextView"
+            tools:text="ProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/product_description" app:layout_constraintStart_toEndOf="@+id/product_image"
