--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#d32f2f</color>
     <color name="colorPrimaryDark">#932020</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="grey">#D3D3D3</color>
 </resources>
