progress bar added

--- a/app/src/main/res/layout/fragment_products_list.xml
+++ b/app/src/main/res/layout/fragment_products_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -12,4 +12,25 @@
             android:id="@+id/products_recycler_view">
     </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+    <!--<com.budiyev.android.circularprogressbar.CircularProgressBar-->
+            <!--android:id="@+id/progress_bar"-->
+            <!--android:layout_width="96dp"-->
+            <!--android:layout_height="96dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--app:animateProgress="true"-->
+            <!--app:backgroundStrokeColor="#ff3f51b5"-->
+            <!--app:backgroundStrokeWidth="2dp"-->
+            <!--app:drawBackgroundStroke="false"-->
+            <!--app:foregroundStrokeCap="butt"-->
+            <!--app:foregroundStrokeColor="#ffff4081"-->
+            <!--app:foregroundStrokeWidth="3dp"-->
+            <!--app:indeterminate="false"-->
+            <!--app:indeterminateRotationAnimationDuration="1200"-->
+            <!--app:indeterminateSweepAnimationDuration="600"-->
+            <!--app:indeterminateMinimumAngle="45"-->
+            <!--app:maximum="100"-->
+            <!--app:progress="50"-->
+            <!--app:progressAnimationDuration="100"-->
+            <!--app:startAngle="270"/>-->
+
+</LinearLayout>
