--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:orientation="vertical"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <EditText
             android:layout_width="wrap_content"
@@ -30,7 +30,6 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username_edt"/>
 
-
     <Button
             android:text="@string/login_btn"
             android:layout_width="wrap_content"
@@ -52,18 +51,30 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
-    <TextView
-            android:text="@string/register_textview"
+
+    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_signup"
-            android:textSize="18sp"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toTopOf="@+id/btn_continue_wo_reg"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@id/btn_continue_wo_reg" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginStart="8dp" android:layout_marginBottom="16dp">
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:textColor="#000000"
+                  android:textSize="18sp"
+                  android:text="@string/warning_missing_acc"/>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_marginLeft="4dp"
+                  android:layout_height="wrap_content"
+                  android:id="@+id/btn_signup"
+                  android:textSize="18sp"
+                  android:textColor="@color/colorPrimary"
+                  android:text="@string/signup_button_text" android:layout_marginStart="4dp"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
